# smc

./: .gitignore  CMakeLists.txt  README  bmc_exercise.cc  bmc_exercise.h  main.cc  mathsat_interface.cc  mathsat_interface.h  parser.h  pred_abs_exercise.cc  pred_abs_exercise.h  program.cc  program.h
Modules/: FindMathSAT.cmake
tests/: sum.l
